[package]
name = "melnet"
version = "0.2.2"
authors = ["Themelio Labs"]
edition = "2018"

description = "Low-level RPC protocol used throughout Themelio for peer-to-peer communciations"
license = "MPL-2.0"
repository = "https://github.com/themeliolabs/melnet"

[dependencies]
thiserror= "1.0.25"
parking_lot= "0.11.1"
# min-max-heap = "1.3.0"0
# by_address= "1.0.4"
log= "0.4.14"
derivative= "2.2.0"
smol= "1.2.5"
smol-timeout= "0.6.0"
rand= "0.8.4"
lazy_static= "1.4.0"
async-net= "1.6.0"
anyhow= "1.0.41"
serde = { version = "1.0.126", features = ["derive"] }
smolscale= "0.3.9"
stdcode= "0.1.2"
env_logger= "0.8.4"
tap="1"
once_cell="1"
deadpool = {version="0.9", default-features=false, features=["managed"]}
async-trait = "0.1.51"
dashmap = "4"
